<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title_text"

        style="@style/title_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_layout_reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"

            android:hint="@string/otp_hint_reset"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout_reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"

        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"

            android:hint="@string/password_hint_reset"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_button_reset"

        style="@style/login_button"/>

</LinearLayout>