<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title_text"

        style="@style/title_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"

            android:hint="@string/email_hint_reset"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_otp_button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_otp_button_text_reset"

        style="@style/login_button"/>

</LinearLayout>